--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-text_ignor.txt### AL ###
+text_ignore.txt 
+### AL ###
 #Template for AL projects for Dynamics 365 Business Central
 #launch.json folder
 .vscode/
